# opof-sbmp

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyrightconfig.json  setup.py
.github/workflows/: build_and_test.yml
examples/: generate_dataset.py  plan.py  visualize.py
ompl_core/ompl/: config.h
ompl_core/ompl/base/: PlannerData.h
ompl_core/ompl_core/: LinearProjection.hpp  PathBasisSampler.hpp  Utils.hpp  ompl_core.cpp
opof_sbmp/: __init__.py  environment.py  robot.py  scene.py  srdf_parser.py  task.py  transformations.py  typing.py  world.py
opof_sbmp/datasets/Bookshelf/: basis000.yaml  basis001.yaml  basis002.yaml  basis003.yaml  basis004.yaml  basis005.yaml  basis006.yaml  basis007.yaml  basis008.yaml  basis009.yaml  basis010.yaml  basis011.yaml  basis012.yaml  basis013.yaml  basis014.yaml  basis015.yaml  basis016.yaml  basis017.yaml  basis018.yaml  basis019.yaml  basis020.yaml  basis021.yaml  basis022.yaml  basis023.yaml  basis024.yaml  basis025.yaml  basis026.yaml  basis027.yaml  basis028.yaml  basis029.yaml  basis030.yaml  basis031.yaml  basis032.yaml  basis033.yaml  basis034.yaml  basis035.yaml  basis036.yaml  basis037.yaml  basis038.yaml  basis039.yaml  (+2960 more)
opof_sbmp/domains/: __init__.py
opof_sbmp/environments/: __init__.py  bookshelf.py  cage.py  table.py
opof_sbmp/meshes/: bookshelf_tall.blend  bookshelf_tall.blend1  bookshelf_tall.mtl  cage.blend  cage.mtl  cube.blend  cube.dae  cube.mtl  cylinder.blend
opof_sbmp/robots/: __init__.py  baxter.py  fetch.py  ur5.py
tests/: test_train.py  test_world.py
(+18011 files in other folders)
